-Update title - bg colour of about content - fix white space on mobile issue - add lp and tb page - remove links from service bullet points -add link to the main title of each card in services

--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,11 @@ body {
     min-height: 100vh;
 }
 
+html, body {
+
+    width: 100%;
+  }
+
 /* Header Styles */
 .main-header {
     background-color: #643c94;
